# ZisK_SVM

./: CHAT_HISTORY.md  Cargo.toml  PRODUCTION_READY_STATUS.md  README.md  build-zisk.sh  build.rs  build_test_program.sh  check_compilation.sh  compilation_report.txt  demo.sh  error_summary.txt  extract_real_bpf.sh  extract_real_bpf_fixed.sh  test_bpf_interpreter.sh  test_build.sh  test_multi_block.sh  zisk-commands.md  zisk-memory.x  zisk.config.toml
guest/src/: bpf.rs  main.rs  memory.rs
host/src/: input_generator.rs  proof_verifier.rs
programs/hello_world/: Cargo.toml
programs/hello_world/src/: lib.rs
programs/simple_calculator/: Cargo.toml
programs/simple_calculator/src/: lib.rs
proof/: result.json
proof_end_to_end_test/: result.json
proof_memory_optimized/: result.json
proof_real_bpf/: result.json
proof_real_solana_program/: result.json
scripts/: extract_bpf.sh
src/: account_serialization_fixes.rs  bpf_interpreter.rs  bpf_interpreter.rs.backup  bpf_parser.rs  bpf_test_utils.rs  bpf_zisk_integration.rs  complete_bpf_interpreter.rs  constants.rs  error.rs  lib.rs  main.rs  memory_optimized_zisk_main.rs  optimized_zisk_main.rs  proof_generator.rs  real_account_loader.rs  real_bpf_loader.rs  real_rbpf_integration.rs  real_solana_parser.rs  riscv_generator.rs  simple_zisk_main.rs  solana_executor.rs  transaction_parsing_fixes.rs  types.rs  unified_execution_pipeline.rs  zisk-memory.x  zisk_compute_budget.rs  zisk_cpi.rs  zisk_integration.rs  zisk_memory_manager.rs  zisk_proof_generator.rs  zisk_proof_integration.rs  zisk_proof_schema.rs  zisk_rbpf_bridge.rs  zisk_state_manager.rs  zisk_svm_bridge.rs  zisk_syscalls.rs
src/shared/: constants.rs
tests/: zk_tests.rs
zisk_bpf_project/: Cargo.toml
zisk_bpf_project/src/: main.rs
