[package]
name = "bpf-zisk-interpreter"
version = "0.1.0"
edition = "2021"
description = "BPF Interpreter for ZisK Integration - Direct BPF execution in ZisK zkVM"
license = "MIT"
repository = "https://github.com/your-username/bpf-zisk-interpreter"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bpf-interpreter"
path = "src/main.rs"

[features]
default = []
test-utils = []
benchmarks = []

# ZisK RISC-V target configuration
[target.riscv64ima-zisk-zkvm-elf]
rustflags = [
    "-C", "target-feature=+m,+a,+c",
    "-C", "link-arg=--strip-all",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true


